src/parser/snapshots/rust_interpreter__parser__test__array_2.snap
---
source: src/parser/test.rs
description: "[1,\"foo\",3];"
expression: stmts
---
[
    ExpressionStatement(
        Array[Int(1), StringLiteral("foo"), Int(3)],
    ),
]
