src/parser/snapshots/rust_interpreter__parser__test__array_index_4.snap
---
source: src/parser/test.rs
description: "[1,2,3,4][1+2]"
expression: first
---
([1,2,3,4][(1 + 2)]);
