src/parser/snapshots/rust_interpreter__parser__test__block_1.snap
---
source: src/parser/test.rs
description: "{ return 5; }"
expression: stmts
---
[
    Block { statements: [Return { value: Int(5) }] },
]
