src/parser/snapshots/rust_interpreter__parser__test__block_2.snap
---
source: src/parser/test.rs
description: "{ return 5; return true; }"
expression: stmts
---
[
    Block { statements: [Return { value: Int(5) }, Return { value: Bool(true) }] },
]
