src/parser/snapshots/rust_interpreter__parser__test__fn_call_1.snap
---
source: src/parser/test.rs
description: add()
expression: stmts
---
[
    ExpressionStatement(
        Call { function: Identifier("add"), args: [] },
    ),
]
