src/parser/snapshots/rust_interpreter__parser__test__fn_call_debug_1.snap
---
source: src/parser/test.rs
description: add()
expression: stmts
---
[
    ExpressionStatement(
        Call { token: Token { token_kind: LParen, line: 0, span: 3..4 }, function: Identifier("add"), args: [] },
    ),
]
