src/parser/snapshots/rust_interpreter__parser__test__fn_call_display_4.snap
---
source: src/parser/test.rs
description: "fn(x, y){ return x + y; }(1, 2);"
expression: first
---
fn(x,y) {
	return (x + y);
}(1,2);
