src/parser/snapshots/rust_interpreter__parser__test__fn_expr_1.snap
---
source: src/parser/test.rs
description: "fn() {}"
expression: stmts
---
[
    ExpressionStatement(
        Function { token: Spanned(0, 2..3, LParen), params: [], body: Block { statements: [] } },
    ),
]
