src/parser/snapshots/rust_interpreter__parser__test__fn_expr_2.snap
---
source: src/parser/test.rs
description: "fn(x) {}"
expression: stmts
---
[
    ExpressionStatement(
        Function { token: Spanned(0, 2..3, LParen), params: [Identifier("x")], body: Block { statements: [] } },
    ),
]
